# cs-from-scratch

./: .flake8  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  tox.ini
.devcontainer/: Dockerfile
.github/workflows/: lint_test.yml
cs_from_scratch/: brainfuck.py
cs_from_scratch/Brainfuck/: brainfuck.py
cs_from_scratch/Chip8/: __init__.py  cli.py  vm.py
cs_from_scratch/Impressionist/: __init__.py  cli.py  impressionist.py  svg.py
cs_from_scratch/KNN/: digit.py  fish.py  knn.py
cs_from_scratch/NESEmulator/: cli.py  console.py  cpu.py  ppu.py  rom.py
cs_from_scratch/NanoBASIC/: GRAMMAR.md  cli.py  errors.py  interpreter.py  nodes.py  parser.py  runtime.py  tokenizer.py
cs_from_scratch/RetroDither/: cli.py  dither.py  macpaint.py
examples/Chip8/Tests/chip8-test-rom-2/: README.md  chip8-test-rom.8o
examples/NESEmulator/Tests/instr_test-v5/: readme.txt
examples/NESEmulator/Tests/instr_test-v5/source/: 01-basics.s  02-implied.s  03-immediate.s  04-zero_page.s  05-zp_xy.s  06-absolute.s  07-abs_xy.s  08-ind_x.s  09-ind_y.s  11-stack.s  13-rts.s  14-rti.s  15-brk.s  16-special.s  nes.cfg  readme.txt
examples/NESEmulator/Tests/instr_test-v5/source/common/: build_rom.s  console.s  crc.s  delay.s  instr_test.inc  instr_test_end.s  macros.inc  ppu.s  print.s  shell.s  shell_misc.s  testing.s  text_out.s
examples/NanoBASIC/: factorial.bas  fib.bas  gcd.bas  gosub.bas  goto.bas  if1.bas  if2.bas  print2.bas  print3.bas  variables.bas
examples/brainfuck/: SOURCES
tests/: test_brainfuck.py
tests/Brainfuck/: test_brainfuck.py
tests/Chip8/: test_chip8_helpers.py
tests/KNN/: test_knn.py
tests/KNN/test_data/digits/: readme.txt
tests/KNN/test_data/fish/: license.txt
tests/NESEmulator/: __init__.py  test_nesemulator.py
tests/NanoBASIC/: test_interpreter.py  test_nanobasic.py
tests/RetroDither/: test_packbits.py
