[project]
name = "cs-from-scratch"
version = "1.0.0"
description = "Following Along With David Kopec's Text"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]

readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Private :: Do Not Upload",
]

requires-python = ">=3.12"
dependencies = [
    "numpy~=2.3",
    "pillow~=11.3",
    "pygame~=2.6",
]

[project.urls]
Homepage = "https://github.com/sco1/"
Documentation = "https://github.com/sco1/cs-from-scratch/blob/main/README.md"
Repository = "https://github.com/sco1/cs-from-scratch.git"
Issues = "https://github.com/sco1/cs-from-scratch/issues"
Changelog = "https://github.com/sco1/cs-from-scratch/blob/main/CHANGELOG.md"

[project.scripts]
brainfuck = "cs_from_scratch.Brainfuck.brainfuck:main"
NanoBASIC = "cs_from_scratch.NanoBASIC.cli:main"

[tool.uv]
dev-dependencies = [
    "black~=25.0",
    "flake8~=7.1",
    "flake8-annotations~=3.1",
    "isort~=6.0",
    "mypy~=1.14",
    "pre-commit~=4.0",
    "pytest~=8.3",
    "pytest-check~=2.4",
    "pytest-cov~=6.0",
    "pytest-randomly~=3.16",
    "ruff~=0.9",
    "tox~=4.23",
    "tox-uv~=1.17",
]

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "cs_from_scratch,tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.uv.build-backend]
module-name = "cs_from_scratch"
module-root = ""

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
